--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <meta name="format-detection" content="telephone=no" />
 
-    <title>HQ Models</title>
+    <title>HQ Family</title>
 
     <style>
       .oh {
@@ -48,20 +48,20 @@
 
     <meta property="og:locale" content="ru_RU" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="HQ Models" />
+    <meta property="og:title" content="HQ Family" />
     <meta
       property="og:description"
       content="Хочешь зарабатывать деньги легко и интересно? Делай это с нами! :)"
     />
-    <meta property="og:url" content="http://hqmodels.ru/" />
-    <meta property="og:site_name" content="HQ Models" />
+    <meta property="og:url" content="http://hqfamily.ru/" />
+    <meta property="og:site_name" content="HQ Family" />
     <meta
       property="og:image"
       itemprop="image"
-      content="http://hqmodels.ru/img/img10.jpg"
+      content="http://hqfamily.ru/img/img10.jpg"
     />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="http://hqmodels.ru/img/img10.jpg" />
+    <meta name="twitter:image" content="http://hqfamily.ru/img/img10.jpg" />
 
     <link
       rel="apple-touch-icon-precomposed"
@@ -182,7 +182,7 @@
         <i class="fa fa-arrow-circle-right" aria-hidden="true"></i></span
     ></a>
     <div class="menu hidden-sm hidden-md hidden-lg">
-      <img src="img/logo.png" class="menu__logo visible-xs" alt="" />
+      <img src="img/logo_new.png" class="menu__logo visible-xs" alt="" />
       <a href="#about-us" class="menu__item scrollto">Кто мы</a>
       <a href="#benefits" class="menu__item scrollto">Преимущества</a>
       <a href="#conditions" class="menu__item scrollto">Условия</a>
@@ -209,10 +209,10 @@
       class="intro"
     >
       <div class="container intro__container">
-        <a href="#"><img src="img/logo.png" class="intro__logo" alt="" /></a>
+        <a href="#"><img src="img/logo_new.png" class="intro__logo" alt="" /></a>
 
         <div class="menu hidden-xs">
-          <img src="img/logo.png" class="menu__logo visible-xs" alt="" />
+          <img src="img/logo_new.png" class="menu__logo visible-xs" alt="" />
           <a href="#about-us" class="menu__item scrollto">Кто мы</a>
           <a href="#benefits" class="menu__item scrollto">Преимущества</a>
           <a href="#conditions" class="menu__item scrollto">Условия</a>
@@ -948,14 +948,14 @@
 
     <section class="benefits" id="benefits">
       <div class="benefits__line"></div>
-      <div
+      <!-- <div
         class="benefits__block scrollme animateme"
         data-when="enter"
         data-from="1"
         data-to="0"
         data-opacity="0"
         data-translatex="500"
-      ></div>
+      ></div> -->
       <div class="container">
         <h2 class="benefits__h2">
           <span class="c-fffad2">Э</span><span class="c-fff9dc">т</span
@@ -1532,6 +1532,7 @@
     <section class="vacancies vacancies__feedback" id="feedback">
       <div class="vacancies__line"></div>
       <div class="vacancies__circle1"></div>
+      <div class="vacancies__circle1 circle__feedback"></div>
       <div class="vacancies__circle2"></div>
       <div class="vacancies__circle3"></div>
       <div class="vacancies__circle4"></div>
@@ -1557,15 +1558,18 @@
               <img class="img img_feedback" src="https://i.ibb.co/R7dHJMy/4.jpg" />
             </div> 
       </div>
-      <div class="feedback__button"><a target="_blank" href="https://t.me/hqmodelsfeedback" class="telegram-button">
-        <span>Все отзывы в нашем канале</span>
-        <strong>Telegram</strong></a></div>
+      <div class="feedback__button">
+        <a target="_blank" href="https://t.me/hqfamilyfeedback" class="telegram-button">
+          <span>Все отзывы в нашем канале</span>
+          <strong>Telegram</strong>
+        </a>
+      </div>
     </section>
 
-    <section class="vacancies vacancies__faq" id="faq">
+    <section class="vacancies__faq vacancies" id="faq">
       <div class="vacancies__line"></div>
       <div class="vacancies__circle3"></div>
-      <div class="vacancies__circle1"></div>
+      <div class="vacancies__circle1 circle1"></div>
       <div class="vacancies__circle4"></div>
       <div class="vacancies__circle2"></div>
 
@@ -1654,6 +1658,9 @@
       </div>
     </section>
 
+
+
+
     <footer class="footer">
       <div class="footer__circle3 hidden-md hidden-sm hidden-xs"></div>
       <div class="footer__circle4 hidden-md hidden-sm hidden-xs"></div>
@@ -1661,15 +1668,14 @@
         <div class="row">
           <div class="col-lg-4 footer__col-left">
             <div class="footer__logo2 visible-md visible-sm visible-xs">
-              <img src="img/logo3.png" class="footer__img" alt="" />Models
-            </div>
+              <img src="img/logo3.png" class="footer__img" alt="" />Family</div>
             <p class="footer__contact footer--mod">
               <i class="fa fa-envelope footer__ico" aria-hidden="true"></i> По
               всем вопросам:
             </p>
             <p class="footer__contact">
-              <a href="mailto: job@hqmodels.studio" class="footer__mail"
-                >job@hqmodels.studio</a
+              <a href="mailto: job@hqfamily.ru" class="footer__mail"
+                >job@hqfamily.ru</a
               >
             </p>
             <p class="footer__social">
@@ -1677,13 +1683,13 @@
                 ><i class="fa fa-vk" aria-hidden="true"></i
               ></a> -->
               <a
-                href="https://www.instagram.com/hqmodels_/"
+                href="https://www.instagram.com/hq_family_hq/profilecard/?igsh=N2RsenE4aWtwNjYz"
                 target="_blank"
                 class="footer__soc-btn"
                 ><i class="fa fa-instagram" aria-hidden="true"></i
               ></a>
               <a
-                href="https://t.me/hqmodelsstudio"
+                href="https://t.me/hqfamilystudio"
                 target="_blank"
                 class="footer__soc-btn footer--big"
                 ><i class="fa fa-telegram" aria-hidden="true"></i
@@ -1695,14 +1701,13 @@
             <div class="footer__circle4 hidden-lg"></div>
             <div class="footer__circle">
               <div class="footer__circle2">
-                <img src="img/logo2.png" class="footer__logo" alt="" />
+                <img src="img/logo_new.png" class="footer__logo" alt="" />
               </div>
             </div>
           </div>
           <div class="col-lg-4 footer__col-right">
             <div class="footer__logo2 hidden-md hidden-sm hidden-xs">
-              <img src="img/logo3.png" class="footer__img" alt="" />Models
-            </div>
+              <img src="img/logo3.png" class="footer__img" alt="" />Family</div>
             <a href="#about-us" class="footer__link scrollto">Кто мы?</a>
             <a href="#benefits" class="footer__link scrollto footer--long"
               >Преимущества</a
