--- a/index.html
+++ b/index.html
@@ -1722,7 +1722,7 @@
             >
             <a href="#faq" class="footer__link scrollto footer--long4">FAQ</a>
             <p class="footer__copyright">
-              © 2024 hqmodels.studio - All Rights Reserved
+              © 2024 hqfamily.ru - All Rights Reserved
             </p>
           </div>
         </div>
