--- a/index.html
+++ b/index.html
@@ -1534,7 +1534,7 @@
       <div class="vacancies__circle1"></div>
       <div class="vacancies__circle1 circle__feedback"></div>
       <div class="vacancies__circle2"></div>
-      <div class="vacancies__circle3"></div>
+      <!-- <div class="vacancies__circle3"></div> -->
       <div class="vacancies__circle4"></div>
       <div class="container">
         <h2 class="vacancies__h2">
@@ -1568,7 +1568,7 @@
 
     <section class="vacancies__faq vacancies" id="faq">
       <div class="vacancies__line"></div>
-      <div class="vacancies__circle3"></div>
+      <!-- <div class="vacancies__circle3"></div> -->
       <div class="vacancies__circle1 circle1"></div>
       <div class="vacancies__circle4"></div>
       <div class="vacancies__circle2"></div>
