--- a/index.html
+++ b/index.html
@@ -1546,12 +1546,12 @@
           <div class="responsive-container-block bg ">
             <div class="responsive-container-block img-cont">
               <img class="img img_feedback" src="https://i.ibb.co/WHNs7sR/1.jpg" />
-              <img class="img img_feedback" src="https://i.ibb.co/D51srb1/2.jpg" />
+              <img class="img img_feedback" src="https://i.ibb.co/jHxvbgh/123.jpg" />
+
             </div>
             <div class="responsive-container-block img-cont">
               <img class="img img_feedback" src="https://i.ibb.co/t3r9rwZ/3.jpg" />
-             
-              <img class="img img_feedback" src="https://i.ibb.co/ZXZfCCZ/6.png" />
+              <img class="img img_feedback" src="https://i.ibb.co/zSLTNdG/2321.jpg" />
             </div>
             <div class="responsive-container-block img-cont">           
               <img class="img img_feedback" src="https://i.ibb.co/P9KwhQB/5.jpg" />
