--- a/index.html
+++ b/index.html
@@ -1582,63 +1582,35 @@
           <div class="accordion">
             <div class="accordion-item">
               <div class="accordion-item-header">
-                Какие основные преимущества в работе стриминг модели?
+                Какие основные преимущества в работе ведущей прямых трансляций?
               </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  1. Удобный график работы.<br />
-                  2. Возможность выучить разговорный английский.<br />
-                  3. Возможность проявить свои таланты и артистизм.<br />
-                  4. Повышение самооценки за счет комплиментов зрителей.
+                  1. Индивидуальный график работы – это почти как в Матрице!  От работы, конечно, не увернешься, но зато как будто бы побывала в разных мирах)) Совмещай свои увлечения, учебу и работу так как хочешь именно ты, и забудь уже о рутине<br /><br />
+                  2. Высокая заработная плата – здесь ты можешь позволить себе не только кофеечек по утрам, но и с легкостью сможешь заработать на все свои хотелки , а то и на новую квартирку! <br /><br />
+                  3. Постоянное развитие – мы не просто работаем, мы растем! Оплачиваем курсы, организуем рабочие посиделки с роллами и фильмами и устраиваем конкурсы и корпоративы (тамада точно веселый, а конкурсы еще интереснее).<br /><br />
+                  4. Монетизация хобби – если ты любишь праздники, психологию, рисование, спорт или танцы, то это твой шанс! Превращай свои увлечения в доход. Гадаешь на таро? Тогда бери карты в руки и вперед обменивать энергию на деньги)<br /><br />
+                  5. Уверенность – с нашей поддержкой ты станешь настоящим гуру трансляций! Менеджер и команда всегда рядом, чтобы подбодрить и направить. С нами ты почувствуешь себя на высоте!
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <div class="accordion-item-header">
-                Кто может стать стриминг моделью?
+                Когда будет моя первая зарплата?
               </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  Мы приглашаем на работу девушек старше 18 лет. Поэтому стать
-                  моделью может почти каждая девушка! Именно наша задача сделать
-                  из тебя звезду. Поэтому не сомневайся и оставляй заявку.
+                  Выплаты производятся дважды в месяц (аванс и зарплата)  Не забудь оставить заявку, чтобы узнать подробности о рассчете заработной платы
                 </div>
               </div>
             </div>
             <div class="accordion-item">
               <div class="accordion-item-header">
-                Когда будет первая зарплата?
-              </div>
+                Какие требования?
+                            </div>
               <div class="accordion-item-body">
                 <div class="accordion-item-body-content">
-                  В нашей студии модели получают зарплату 2 раза в месяц.
-                  Поэтому не стоит переживать за задержки и ожидания оплаты
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <div class="accordion-item-header">
-                Какие требования ко мне могут быть?
-              </div>
-              <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                  Мы не ставим моделей в жесткие рамки, однако просим соблюдать
-                  порядок на студии, вовремя приходить на работу, придерживаться
-                  графику. Благодаря небольшим требованиям на студии будет
-                  порядок, а работа будет идти продуктивнее.
-                </div>
-              </div>
-            </div>
-            <div class="accordion-item">
-              <div class="accordion-item-header">
-                Я не знаю английский язык, что делать?
-              </div>
-              <div class="accordion-item-body">
-                <div class="accordion-item-body-content">
-                  Начать работу можно и без знания английского языка. На сайтах
-                  есть встроенные переводчики, которые помогут в общении. А
-                  благодаря постоянному общению с иностранцами ты легко сможешь
-                  выучить разговорный английский
+                  Мы не ставим сотрудников в жесткие рамки, но немного порядка и дисциплины нам все же нужны. Это как в игре: чем лучше ты следуешь правилам, тем быстрее проходишь уровень! Так что соблюдай график, и работа станет более продуктивной.
                 </div>
               </div>
             </div>
