--- a/index.html
+++ b/index.html
@@ -1741,7 +1741,7 @@
                 required
               />
               <select
-                class="form-control modal__input modal--select"
+                class="form-control modal__input modal--select modal__select"
                 id="vacancy"
                 name="vacancy"
                 required
@@ -1755,7 +1755,7 @@
                 <option value="менеджер">Менеджер студии</option>
               </select>
               <select
-                class="form-control modal__input modal--select"
+                class="form-control modal__input modal--select modal__select"
                 id="city"
                 name="city"
                 required
