--- a/index.html
+++ b/index.html
@@ -1542,6 +1542,19 @@
           ><span class="c-ff9bc9">з</span><span class="c-fda6da">ы</span
           ><span class="c-f6acdf">в</span><span class="c-ebb0d9">ы</span>
         </h2>
+        
+        <div class="video-container">
+          <iframe 
+            width="560" 
+            height="315" 
+            src="https://rutube.ru/play/embed/bf2147b8b22ff26fa58512e1d2b7720c" 
+            frameborder="0" 
+            webkitAllowFullScreen 
+            mozallowfullscreen 
+            allowfullscreen
+          ></iframe>
+        </div>
+
         <div class="album">
           <div class="responsive-container-block bg ">
             <div class="responsive-container-block img-cont">
