--- a/index.html
+++ b/index.html
@@ -944,7 +944,7 @@
           />
         </svg>
       </div>
-      <div class="video-container">
+      <div class="container"><div class="video-container">
         <iframe 
           width="560" 
           height="315" 
@@ -954,9 +954,10 @@
           mozallowfullscreen 
           allowfullscreen
         ></iframe>
-      </div>
+      </div></div>
     </section>
-
+ 
+    
    
 
     <section class="benefits" id="benefits">
